<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="za.co.gingergeek.moneta.ui.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.home.HomeFragment">

            <TextView
                android:id="@+id/last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="12sp"
                android:text="@{viewmodel.lastUpdated}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/last_updated_image"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/home_screen_update_data_indicator"
                android:tint="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/last_updated"
                app:layout_constraintEnd_toStartOf="@+id/last_updated"
                app:layout_constraintTop_toTopOf="@+id/last_updated"
                app:srcCompat="@drawable/ic_cached" />

            <LinearLayout
                android:id="@+id/no_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:contentDescription="@string/home_screen_empty_box_icon"
                    android:tint="?android:attr/textColorPrimary"
                    android:src="@drawable/ic_box" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/home_screen_no_data_text"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_updated" />
            </LinearLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="36dp"
                    android:clipToPadding="false" />

                <com.google.android.material.bottomappbar.BottomAppBar
                    android:id="@+id/bottom_app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:backgroundTint="?android:attr/colorAccent"
                    app:fabAlignmentMode="end"
                    app:fabCradleMargin="8dp"
                    app:hideOnScroll="true"
                    app:menu="@menu/menu_home_bottom" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_currency_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/white"
                    app:layout_anchor="@id/bottom_app_bar"
                    app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="80dp"
                android:contentDescription="@string/home_screen_no_data_fab_indicator"
                android:tint="?android:attr/textColorPrimary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_curve_arrow" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>